inserted the onkeyup function to js file, haven't tested yet but need to get back into habit of pushing stuff to github so HERE I AM

--- a/221116.html
+++ b/221116.html
@@ -6,12 +6,13 @@
 </head>
 <body>
 	<p>
-		Hello
+		Looking for information about a movie? Search here!!
 	</p>
+<!-- wouldn't normally put my js here but it wasn't working otherwise.... welp -->
 	<script type="text/javascript" src="movie.js"></script>
 
 	<p>
-		Enter a movie title: <input type="text" id="movie">
+		Enter a movie title: <input type="text" id="movie-title">
 		<input type="button" id="getMovie" value="Search">
 	</p>
 	<p id="results">
