added a div to display results

--- a/221116.html
+++ b/221116.html
@@ -15,6 +15,7 @@
 		Enter a movie title: <input type="text" id="movie-title">
 	</p>
 	<p id="results">
+		<div id="results-movie"></div>
 	</p>
 </body>
 </html>
