--- a/221116.html
+++ b/221116.html
@@ -14,8 +14,22 @@
 	<p>
 		Enter a movie title: <input type="text" id="movie-title">
 	</p>
-	<p id="results">
-		<div id="results-movie"></div>
-	</p>
-</body>
+	
+	<div id="results"></div>
+	
+	<div>
+		<table id="resultsMovie">
+				<thead>
+					<tr>
+						<th>Poster</th>
+						<th>Title</th>
+						<th>Year</th>
+					</tr>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
+	</div>
+	
+	</body>
 </html>
